updates homepage image file paths

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -7,7 +7,7 @@
         = link_to "projects/closeoutbike", :class => "a-case-study-button closeoutbike" do
           View case study
       .column.float-left
-        = image_tag("closeoutbike_img.png")
+        = image_tag("closeoutbike_homepage.png")
 
   .featured-project.mobilizeart
     .row
@@ -17,7 +17,7 @@
         = link_to "projects/mobilizeart", :class => "a-case-study-button mobilizeart" do
           View case study
       .column
-        = image_tag("mobilizeart_img.png")
+        = image_tag("mobilizeart_homepage.png")
 
   .featured-project.gigdog
     .row
@@ -27,7 +27,7 @@
         = link_to "projects/gigdog", :class => "a-case-study-button gigdog" do
           View case study
       .column.float-left
-        = image_tag("gigdog_img.png")
+        = image_tag("gigdog_homepage.png")
 
   .featured-project.scheduleshare
     .row
@@ -37,7 +37,7 @@
         = link_to "projects/scheduleshare", :class => "a-case-study-button scheduleshare" do
           View case study
       .column
-        = image_tag("scheduleshare_img.png")
+        = image_tag("scheduleshare_homepage.png")
 
   .featured-project.textus
     .row
@@ -47,4 +47,4 @@
         = link_to "projects/textus", :class => "a-case-study-button textus" do
           View case study
       .column.float-left
-        = image_tag("textus_img.png")
+        = image_tag("textus_homepage.png")
