adds availendar project

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -28,7 +28,7 @@ $gigdog-bg: #164d67;
 $scheduleshare-bg: #2c2c2c;
 $textus-bg: #922b8d;
 $greeneggs-bg: #a5c675;
-
+$availendar-bg: #66bae8;
 
 @mixin pt-sans {
   font-family: 'PT Sans', sans-serif;
