--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -52,6 +52,10 @@
     }
   }
 
+  .featured-project.availendar {
+    background-color: $availendar-bg;
+  }
+
   .featured-project.closeoutbike {
     background-color: $closeoutbike-bg;
   }
