--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -87,6 +87,11 @@
   background-color: $closeoutbike-bg;
 }
 
+#availendar-box {
+  margin-left: 150px;
+  background-color: $availendar-bg;
+}
+
 #mobilizeart-box {
   margin-right: 150px;
   background-color: $mobilizeart-bg;
