--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -6,11 +6,11 @@
     %h3 Recent Work
     %h4 We have a solid track record of delivering great results - on time and on budget. Here are just a few of our recent wins.
   .row
-    #closeoutbike-box.column.five
-      %a#darken-box{:href => "projects/closeoutbike"}
-        %h3 CloseoutBike
-        %h4 UI, UX & Branding
-      = image_tag("closeoutbike_result.png")
+    #availendar-box.column.five
+      %a#darken-box{:href => "projects/availendar"}
+        %h3 Availendar
+        %h4 Design, Frontend & Backend
+      = image_tag("availendar_result.png")
 
     #mobilizeart-box.column.five
       %a#darken-box{:href => "projects/mobilizeart"}
