use link_to, not button_to, otherwise there's no indication of where link goes

--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -36,7 +36,7 @@
 }
 
 .btn:hover {
-  color: #FFFFFF; 
+  color: #FFFFFF;
 }
 
 .btn.center {
@@ -54,7 +54,7 @@
   padding-top: 5px;
 }
 
-.btn.orange {  
+.btn.orange {
   background-color: #fbaf3f;
 }
 
@@ -238,4 +238,8 @@ body .darkblue {
     background: white !important;
     color: $dark-blue;
   }
+}
+
+#lets-work-together {
+  padding-top: 5px;
 }
