--- a/app/views/layouts/_together.html.haml
+++ b/app/views/layouts/_together.html.haml
@@ -3,4 +3,4 @@
     .column.eight
       %h3 We are a distributed team of superheroes.
     #work-together.column.four
-      = button_to "let's work together", contact_path(:anchor => "request"), :class => "btn blue center top-margin-small", :method => :get
+      = link_to "let's work together", contact_path(:anchor => "request"), :id => "lets-work-together", :class => "btn blue center top-margin-small", :method => :get
