--- a/app/views/layouts/_together.html.haml
+++ b/app/views/layouts/_together.html.haml
@@ -2,5 +2,5 @@
   .row
     .column.eight
       %h3 We are a distributed team of superheroes.
-    #work-together.column.four
+    #work-together.column.four{"data-no-turbolink" => true}
       = link_to "let's work together", contact_path(:anchor => "request"), :id => "lets-work-together", :class => "btn blue center top-margin-small"
