--- a/app/views/messages/_contact.html.haml
+++ b/app/views/messages/_contact.html.haml
@@ -1,7 +1,7 @@
 = form_for @message, :html => { :id => 'contact-form'} do |f|
   -if @message.errors.any?
     #error_explanation
-      %h2= "#{pluralize(@message.errors.count, "error")} prohibited this message from being saved:"
+      %h2= "Uh-oh, looks like there's some information missing. Please check and make sure all the fields are filled out."
       %ul
         - @message.errors.full_messages.each do |msg|
           %li= msg
