--- a/app/views/errors/505.html.haml
+++ b/app/views/errors/505.html.haml
@@ -1,3 +1,3 @@
-.dialog
+.dialog.error-dialog
   %h1 We're sorry, but something went wrong.
-  %p We've been notified about this issue and we'll take a look at it shortly.
+  %h3 We've been notified about this issue and we'll take a look at it shortly.
