--- a/app/views/layouts/_top_section.html.haml
+++ b/app/views/layouts/_top_section.html.haml
@@ -1,9 +1,9 @@
-#feature-content  
+#feature-content
   #title
-    %h1.fit-title Let's <br> Build <br> Something
+    %h1.fit-title Let's Build Something
 
-  #slogan
-    %h2.fit-slogan We will work together to build the right web and mobile applications for you and your users.
+    .scroll-arrow
+      = image_tag "scroll_arrow.png"
 
 %script{src: "http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"}
 %script{src: "http://code.jquery.com/ui/1.10.0/jquery-ui.js"}
@@ -14,9 +14,9 @@
       var compressor = kompressor || 1,
           settings = $.extend({
             'minFontSize' : Number.NEGATIVE_INFINITY,
-            'maxFontSize' : Number.POSITIVE_INFINITY
+            'maxFontSize' : 90 //Number.POSITIVE_INFINITY
           }, options);
-    
+
       return this.each(function(){
         var $this = $(this);
         var resizer = function () {
@@ -29,5 +29,15 @@
   })( jQuery );
 :javascript
   $(".fit-title").fitText(1, {minFontSize: '30px'});
-  $(".fit-slogan").fitText(1, {maxFontSize: '30px'});
+
+  // set the vertical height on resize as well to keep things centered
+  $(document).ready(function() {
+    var topOffset = 370;
+
+    $("#title").css("top", (window.innerHeight - topOffset) / 2);
+
+    $(window).on("resize orientationchange", function() {
+      $("#title").css("top", (window.innerHeight - topOffset) / 2);
+    });
+  });
 
