adds landing page for competition

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -12,6 +12,7 @@ $dark-gray: #333333;
 $blue: #1588c3;
 $bright-blue: #2ba6cb;
 $dark-blue: #004264;
+$spring-blue: #266287;
 
 $white: #FFF;
 $black: #000;
