--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,12 +16,29 @@
     = favicon_link_tag
     = render "shared/facebook_meta", :image => yield(:image), :description => yield(:description), :title => yield(:title)
 
+    - if current_page?('/competition')
+      %link{href: "//cdn-images.mailchimp.com/embedcode/slim-081711.css", rel: "stylesheet", type: "text/css"}
+      #fb-root
+      :javascript
+        (function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=427613157279609";
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+      :javascript
+        !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+
   %body
     %header
       %div#site-header{class: current_page?('/') ? 'sticky-header' : 'fixed-header'}
-        - if admin_signed_in?
-          = render "layouts/admin_menu"
-        = render "layouts/header"
+        - unless current_page?('/competition')
+          - if admin_signed_in?
+            = render "layouts/admin_menu"
+          = render "layouts/header"
+        - else
+          = yield :competition_header
     %div.container.main-container.body
       - if current_page?('/')
         %section.feature
