--- a/app/views/shared/_fonts.html.haml
+++ b/app/views/shared/_fonts.html.haml
@@ -1,3 +1,5 @@
 = stylesheet_link_tag "http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Droid+Serif"
 = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Merriweather+Sans:400,700"
 = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Merriweather"
+= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Merriweather"
+= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Open+Sans:400,700,800"
