--- a/app/views/home/competition.html.haml
+++ b/app/views/home/competition.html.haml
@@ -6,12 +6,10 @@
 
 #competition-description
   .row
-    .eight.columns
-      %h1 $50K App Contest
-      %h2 Coshx Labs is giving away $50,000 of development work, no strings attached. We will be seeking submissions from anyone with an idea, but the public will pick the winner. No fees, no fighting over equity, just a kick ass app to springboard you to fame and fortune. All we ask is that you buy us a beer when you bank your first million. Enter your email address below to get the info. Time to start building.
-      = render "mailchimp_form"
-    .four.columns
-      = image_tag("contest_iphone.png")
+    = image_tag("hero_img.png")
+    %h1 $50K Application Competition
+    %h2 Coshx Labs is giving away $50,000 of development work, no strings attached. We will be seeking submissions from anyone with an idea, but the public will pick the winner. No fees, no fighting over equity, just a kick ass app to springboard you to fame and fortune. All we ask is that you buy us a beer when you bank your first million. Enter your email address below to get the info. Time to start building.
+    = render "mailchimp_form"
 
 #competition-details
   .row
