--- a/app/assets/stylesheets/competition.css.scss
+++ b/app/assets/stylesheets/competition.css.scss
@@ -37,32 +37,34 @@
   h1, h2 {
     font-family: "Open Sans", sans-serif;
     color: #ffffff;
+    margin-top: 60px;
   }
 
   h1 {
     font-size: 48px;
     font-weight: bold;
-    margin-top: 20px;
   }
 
   h2 {
     font-size: 18px;
     line-height: 28px;
-    margin-top: 40px;
     max-width: 950px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 0;
   }
 
   img {
-    margin-top: 72px;
+    margin-top: 60px;
     display: block;
     margin-left: auto;
     margin-right: auto;
   }
 
   form {
-    padding-top: 25px !important;
+    padding-top: 60px !important;
+    padding-bottom: 60px !important;
+    margin-bottom: 0;
   }
 
 }
