adds mobile menu

--- a/app/assets/stylesheets/contact_us.css.scss
+++ b/app/assets/stylesheets/contact_us.css.scss
@@ -61,7 +61,7 @@
 	}
 }
 
-#map-container {
+#map-container {   //see header.css.scss for mobile-menu class addition definition
 	position: fixed;
 	z-index: -1;
 	bottom: -43px;
