--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -1,6 +1,6 @@
 @import "common";
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: $mobile-view-size) {
   body .the-button, .a-button {
     width: 90% !important;
     display: block !important;
