--- a/app/views/home/competition.html.haml
+++ b/app/views/home/competition.html.haml
@@ -2,6 +2,7 @@
   #competition-header
     .row
       #competition-logo
+      %h4.bubble Accepting Submissions from March 1st till April 14th
       = render "social_like_links"
 
 #competition-description
