adds responsive view

--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -2,13 +2,14 @@
 
 #about-header {
   background: #38a8cc;
-  padding-top: 130px;
+  padding-top: 10.7%;
+
   h1, h2 {
     color: #FFFFFF;
     margin-top: 40px;
   }
   h2 {
-    padding-bottom: 160px;
+    padding-bottom:160px;
   }
 }
 
@@ -18,6 +19,7 @@
     height: 100%;
     border-bottom: 1px solid #e9e9e9;
   }
+
   h5 {
     margin-top: 25px;
   }
