--- a/app/views/layouts/_together.html.haml
+++ b/app/views/layouts/_together.html.haml
@@ -1,6 +1,5 @@
 %article#together.body
   .row
-    .column.eight
-      %h3 We are a distributed team of superheroes.
-    #work-together.column.four{"data-no-turbolink" => true}
-      = link_to "let's work together", contact_path(:anchor => "request"), :id => "lets-work-together", :class => "btn blue center top-margin-small"
+    %h3 We are a distributed team of superheroes.
+    #work-together.column.twelve{"data-no-turbolink" => true}
+      = link_to "let's work together", contact_path(:anchor => "request"), :id => "lets-work-together", :class => "btn blue small"
