--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -4,39 +4,51 @@
 #recent-work
   #our-work-text.row
     %h3 Recent Work
-    %h4 We have a solid track record of delivering great results - on time and on budget. Here are just a few of our recent wins.
+    %h4 We have a solid track record of delivering great&nbspresults&nbsp-&nbspon&nbsptime&nbspand&nbspon&nbspbudget. <br>Here are just a few of our recent wins.
   .row
-    #availendar-box.column.five
-      %a#darken-box{:href => "projects/availendar"}
-        %h3 Availendar
-        %h4 Design, Frontend & Backend
-      = image_tag("availendar_result.png")
+    .column.six
+      #availendar.content-box
+        %a#darken-box{:href => "projects/availendar"}
+          .text
+            %h3 Availendar
+            %h4 Design, Frontend & Backend
+        = image_tag("availendar_result.png")
 
-    #mobilizeart-box.column.five
-      %a#darken-box{:href => "projects/mobilizeart"}
-        %h3 MobilizeArt
-        %h4 Design & Frontend
-      = image_tag("mobilizeart_result.png")
+    .column.six
+      #mobilizeart.content-box
+        %a#darken-box{:href => "projects/mobilizeart"}
+          .text
+            %h3 MobilizeArt
+            %h4 Design & Frontend
+        = image_tag("mobilizeart_result.png")
   .row
-    #gigdog-box.column.five
-      %a#darken-box{:href => "projects/gigdog"}
-        %h3 Gigdog
-        %h4 Design, Frontend & Backend    
-      = image_tag("gigdog_result.png")
-    #greeneggs-box.column.five
-      %a#darken-box{:href => "projects/greeneggs"}
-        %h3 GreenEggs
-        %h4 Design, Frontend & Backend
-      = image_tag("greeneggs_result.png")
+    .column.six
+      #gigdog.content-box
+        %a#darken-box{:href => "projects/gigdog"}
+          .text
+            %h3 Gigdog
+            %h4 Design, Frontend & Backend
+        = image_tag("gigdog_result.png")
+    .column.six
+      #greeneggs.content-box
+        %a#darken-box{:href => "projects/greeneggs"}
+          .text
+            %h3 GreenEggs
+            %h4 Design, Frontend & Backend
+        = image_tag("greeneggs_result.png")
   .row
-    #textus-box.column.five
-      %a#darken-box{:href => "projects/textus"}
-        %h3 TextUs
-        %h4 Backend
-      = image_tag("textus_result.png")
-    #scheduleshare-box.column.five
-      %a#darken-box{:href => "projects/scheduleshare"}
-        %h3 ScheduleShare
-        %h4 Design, Frontend & Backend
-      = image_tag("scheduleshare_result.png")
+    .column.six
+      #textus.content-box
+        %a#darken-box{:href => "projects/textus"}
+          .text
+            %h3 TextUs
+            %h4 Backend
+        = image_tag("textus_result.png")
+    .column.six
+      #scheduleshare.content-box
+        %a#darken-box{:href => "projects/scheduleshare"}
+          .text
+            %h3 ScheduleShare
+            %h4 Design, Frontend & Backend
+        = image_tag("scheduleshare_result.png")
       
