--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,39 +1,53 @@
 %footer.container
-  .row#footer-info
-    #footer-logo.column.three
-      = link_to image_tag("logo_grey.png"), root_path
+  .row
+    #footer-logo.column.two
+      #logo-links
+        = link_to image_tag("logo_grey.png"), root_path
     #location.column.two
-      %h3 Boulder <br><br>
-      %h4 3080 Valmont Rd Suite 280
-      %h4 Boulder, CO 80301 <br><br>
+      .city
+        Boulder
+      .address
+        3080 Valmont Rd Suite 280
+        %br
+        Boulder, CO 80301
       %h5= link_to 'info@coshx.com', 'mailto:info@coshx.com'
     #location.column.two
-      %h3 Charlottesville <br><br>
-      %h4 1110 East Market St Suite N7
-      %h4 Charlottesville, VA 22902 <br><br>
+      .city
+        Charlottesville
+        %br
+      .address
+        1110 East Market St Suite N7
+        %br
+        Charlottesville, VA 22902
       %h5= link_to 'info@coshx.com', 'mailto:info@coshx.com'
-
     #location.column.two
-      %h3 San Francisco <br><br>
-      %h4 972 Mission Street, 5th Floor
-      %h4 San Francisco, CA 94103 <br><br>
+      .city
+        San Francisco
+      .address
+        972 Mission Street, 5th Floor
+        %br
+        San Francisco, CA 94103
       %h5= link_to 'info@coshx.com', 'mailto:info@coshx.com'
-
     #location.column.two
-      %h3 Austin <br><br>
-      %h4 701 Brazos St, Suite 1601
-      %h4 Austin, TX 78701 <br><br>
+      .city
+        Austin
+      .address
+        701 Brazos St, Suite 1601
+        %br
+        Austin, TX 78701
       %h5= link_to 'info@coshx.com', 'mailto:info@coshx.com'
-    #social.column.one
-      %h3 Social 
-      = link_to image_tag("footer-twitter.png"), "http://www.twitter.com/coshxlabs"
-      = link_to image_tag("footer-facebook.png"), "http://www.facebook.com/coshxlabs"
-  .row#copyright
-    .column.four
-      %h3 Copyright © 2013. All rights reserved
-    .column.one
+    #social.column.two
+      %h3 Social
+      #social-links
+        %p<
+          = link_to image_tag("footer-twitter.png"), "http://www.twitter.com/coshxlabs"
+          = link_to image_tag("footer-facebook.png"), "http://www.facebook.com/coshxlabs"
+  #footer-bottom.row
+    #copyright.column.six
+      %h4 Copyright © 2013. All rights reserved
+    #scrollup.column.six
       = image_tag("footer_arrow.png")
-      = link_to "Back to top", "#", :class => "scrollup"
+      %h4= link_to "Back to top", "#"
 
 - if current_page?('/contact')
   #map-container
