--- a/app/views/home/_team_member.html.haml
+++ b/app/views/home/_team_member.html.haml
@@ -1,11 +1,15 @@
-%a{:href => about_path, :class => 'about-us-avatar'}(style="background:url(#{Gravatar.new(person.email).image_url(:size => 80)});")
+= image_tag Gravatar.new(person.email).image_url(:size => 80), class: 'about-us-avatar'
 #member-info
-	%h7 
-		= person.name
-	%br
-	%h8 
-		= person.position
-	%br
-	%h8 
-		- if person.twitter?
-			%a{:href => "http://twitter.com/#{person.twitter}"}@#{person.twitter}
+  %h7 
+    = person.name
+  %br
+  %h8 
+    = person.position
+  %br
+  - if person.github?
+    %h8 
+      %a{:href => "http://github.com/#{person.github}", target: "_blank"}Github
+  %br
+  - if person.twitter?
+    %h8
+      %a{:href => "http://twitter.com/#{person.twitter}", target: "_blank"}Twitter
