finishes zen-109 and zen-114: - adds nicely styled modals for employees - adds LinkedIn link - removes likes and dislikes, at least until we have real content for it

--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -217,3 +217,34 @@
   -o-transition: all 0.3s ease-out; /* Opera 10.5–12.00 */
   transition: all 0.3s ease-out; /* Firefox 16+, Opera 12.50+ */
 }
+
+.modal .about-us-avatar {
+  float: left;
+}
+
+.modal h2{
+  text-align: left;
+  margin-top: 0px;
+}
+
+.modal .employee-info {
+  float: left;
+  margin-left: 10px;
+}
+
+.modal .employee-info h3 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.modal .employee-info h5 {
+  margin: 0px;}
+
+.modal .employee-info li {
+  margin-right: 10px;
+  display: inline;
+}
+
+.modal .employee-header {
+  overflow: hidden;
+}
