--- a/app/views/home/_employee.html.haml
+++ b/app/views/home/_employee.html.haml
@@ -1,23 +1,22 @@
-%section#about.w960.clearfix
-  %h1.capitalize
-    = @employee.name
-  %a.quote.ben.the-tooltip{:href => ""}
-    %span
-      = @employee.quote
-  %img.portrait{:alt => "", :src => @employee.portrait_url}/
-  %p.bio
-    =@employee.bio
-  #likes
-    %h2 Likes
-    %p.capitalize
-      = @employee.likes
-    %h2 Dislikes
-    %p.capitalize
-      =@employee.dislikes
-  %ul#social-media
-    -if @employee.twitter
-      %li.twitter
-        %a{:href => ""} @employee.twitter
-    -if @employee.github
-      %li.github
-        %a{:href => ""} @employee.github
+.modal.hide.fade{'class' => employee.slug, "tabindex" => "-1", "data-keyboard" => "true"}
+  .modal-header.employee-header
+    %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", type: "button"} ×
+    = image_tag Gravatar.new(employee.email).image_url(:size => 80), class: 'about-us-avatar', alt: employee.name
+    .employee-info
+      %h3.capitalize
+        = employee.name
+      %h5
+        = employee.position
+      %ul#social-media
+        -if employee.github
+          %li.github
+            %a{:href => "http://github.com/#{employee.github}", :target => "_blank"} Github
+        -if employee.linked_in
+          %li.linked_in
+            %a{:href => employee.linked_in, :target => "_blank"} LinkedIn
+        -if employee.twitter
+          %li.twitter
+            %a{:href => "http://twitter.com/#{employee.twitter}", :target => "_blank"} Twitter
+  .modal-body
+    %p.bio
+      =employee.bio
