--- a/app/views/home/_team_member.html.haml
+++ b/app/views/home/_team_member.html.haml
@@ -1,15 +1,9 @@
-= image_tag Gravatar.new(person.email).image_url(:size => 80), class: 'about-us-avatar'
+= link_to(image_tag(Gravatar.new(person.email).image_url(:size => 80), class: 'about-us-avatar'),
+                    "#", {"data-target" => ".#{person.slug}", "data-toggle" => "modal"})
 #member-info
-  %h7 
-    = person.name
+  %h7
+    = link_to(person.name, "#", {"data-target" => ".#{person.slug}", "data-toggle" => "modal"})
+    = render partial: "employee", locals: {employee: person}
   %br
   %h8 
     = person.position
-  %br
-  - if person.github?
-    %h8 
-      %a{:href => "http://github.com/#{person.github}", target: "_blank"}Github
-  %br
-  - if person.twitter?
-    %h8
-      %a{:href => "http://twitter.com/#{person.twitter}", target: "_blank"}Twitter
