adds permalinks for employees and scrolls to team section

--- a/app/views/home/_employee.html.haml
+++ b/app/views/home/_employee.html.haml
@@ -1,4 +1,4 @@
-.modal.hide.fade{'class' => employee.slug, "tabindex" => "-1", "data-keyboard" => "true"}
+.modal.permalink.hide.fade{'class' => employee.slug, 'id' => employee.slug, "tabindex" => "-1", "data-keyboard" => "true"}
   .modal-header.employee-header
     %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", type: "button"} ×
     = image_tag Gravatar.new(employee.email).image_url(:size => 80), class: 'about-us-avatar', alt: employee.name
