improves footer styling on desktops

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -183,6 +183,13 @@ nav ul li a:hover, nav ul li a.active {
     text-align: center;
     font-family: "Merriweather Sans", Georgia;
   }
+
+  @media (min-width: $desktop-view-size) {
+    #logo {
+      margin-left: 0px;
+    }
+  }
+
   @media (max-width: $mobile-view-size) {
     h2 {
       text-indent: 100%;
