--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -80,7 +80,7 @@ footer {
   h3{
     text-align:center;
     float:none;
-    font-size:10px !important;
+    font-size:10px;
   }
   #social-links {
     width:84px ;
@@ -145,6 +145,69 @@ footer {
     img,a{
       float:none;
     }
+  }
+}
+
+
+@media (min-width: $desktop-view-size) {
+
+  #footer-logo {
+    width: 70px;
+    margin-top: 0px !important;
+  }
+
+  #logo-links {
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+  }
+
+  #location {
+    margin-top: 5px !important;
+    margin-left: 40px !important;
+
+    h5 {
+      text-align: left !important;
+    }
+  }
+
+  .city {
+    text-align: left !important;
+    font-size: 12px !important;
+    padding-bottom: 17px !important;
+  }
+
+  .address {
+    text-align: left !important;
+    line-height: 18px !important;
+    padding-bottom: 17px !important;
+  }
+
+  #social {
+
+    max-width: 100px;
+    margin-top: 0px !important;
+
+    h3 {
+      font-size: 12px !important;
+      margin-top: 0px !important;
+      margin-bottom: 25px !important;
+    }
+  }
+
+  #social-links {
+    width: 42px !important;
+  }
+
+  #copyright h4 {
+    font-size: 12px !important;
+  }
+
+  #footer-bottom img {
+    margin-top: 20px !important;
+  }
+
+  #footer-bottom a {
+    margin-right: 5px !important;
   }
 }
 
