a little more spacing for mobile so icons don't overlap with text

--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -289,4 +289,8 @@
   .row .mobile-one{
     padding-left: 0px;
   }
+
+  .row.even .mobile-three, .row.last .mobile-three{
+    padding-left: 35px;
+  }
 }
