use var in scss

--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -259,7 +259,7 @@
   }
 }
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: $mobile-view-size){
   #circle-off-white{
     width: 90px !important;
     height: 90px !important;
