SEO changes, adds site map

--- a/app/views/layouts/_menu_tabs.html.haml
+++ b/app/views/layouts/_menu_tabs.html.haml
@@ -1,5 +1,5 @@
-= tab_to "Get to know us", about_path, active_tab("#{about_path}$")
-= tab_to "Our work", projects_path, active_tab("#{projects_path}$")
-= tab_to "Blog", blog_posts_path, active_tab("#{blog_posts_path}$")
-= tab_to "Careers", careers_path, active_tab("#{jobs_path}$")
-= tab_to "Contact", contact_path, active_tab("#{contact_path}$").merge({'data-no-turbolink' => true})
+= tab_to "Get to know us", about_path, active_tab("#{about_path}$").merge({title: "About"})
+= tab_to "Our work", projects_path, active_tab("#{projects_path}$").merge({title: "Previous clients and projects"})
+= tab_to "Blog", blog_posts_path, active_tab("#{blog_posts_path}$").merge({title: "Blog"})
+= tab_to "Careers", careers_path, active_tab("#{jobs_path}$").merge({title: "Careers"})
+= tab_to "Contact", contact_path, active_tab("#{contact_path}$").merge({'data-no-turbolink' => true, title: "Contact"})
