with Calvin/elbartostrikesagain: - updates rspec-rails - fixes zen 107: cleans up the blog author links - cleans up the mobile layout on /about

--- a/app/views/posts/_one_post.html.haml
+++ b/app/views/posts/_one_post.html.haml
@@ -5,7 +5,7 @@
 	    
 			%h2
 				Written by
-				= link_to post.author.name, blog_posts_path(:author_id => post.author_id)
+				= link_to post.author.name, by_author_path(post.author.slug)
 				on
 				= post.created_at.strftime("%B %d, %Y")
 			.post-content
