--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -25,8 +25,32 @@
   margin-left: auto;
   margin-right: auto;
   border-bottom: 1px solid #e3e1df;
-  padding-top: 70px;
-  padding-bottom: 50px;
+  padding-top: 35px;
+  padding-bottom: 25px;
+}
+
+#post-description h2{
+  margin-top: 10px;
+}
+
+#author-info .about-us-avatar{
+  margin-left: 0;
+  margin-right: 0;
+  vertical-align: middle;
+  display: inline;
+}
+
+#author-info{
+  max-width: 833px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+}
+
+#author-info #posted-by{
+  display: inline;
+  margin-left: 15px;
+  vertical-align: middle;
 }
 
 .post-content {
@@ -115,12 +139,14 @@
 nav span {
   padding-right: 5px;
   font-family: "Merriweather Sans", sans-serif;
-  font-size: 24px;
-  text-transform: uppercase;
-  font-weight: bold;
+  font-size: 20px;
+  text-transform: capitalize;
   a {
       color: #38A8CC;
   }
 }
 
+.pagination{
+  padding-top: 15px;
+}
 
