--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,4 +1,5 @@
 .all-posts
+  = render partial: 'author_info'
   - @posts.each do |p|
     .row
       #post-description
@@ -10,7 +11,7 @@
           %h3= link_to link_text.html_safe, show_post_path(p.permalink_attributes), :title => "Read More"
           %h2
             Written by
-            = link_to p.author.name, blog_posts_path(:author_id => p.author_id)
+            = link_to p.author.name, by_author_path(p.author.slug)
             on
             = p.created_at.strftime("%B %d, %Y")
 
