--- a/app/views/layouts/_top_section.html.haml
+++ b/app/views/layouts/_top_section.html.haml
@@ -1,6 +1,6 @@
 #feature-content
   #title
-    %h1.fit-title Let's Build Something
+    %h1.fit-title Radically Transparent Web and Mobile Development
 
     .scroll-arrow
       = image_tag "scroll_arrow.png"
