add in mailbox number to Austin address

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -32,7 +32,7 @@
       .city
         Austin
       .address
-        701 Brazos St, Suite 1601
+        701 Brazos St, Suite 1601 #1616
         %br
         Austin, TX 78701
       %h5= link_to 'info@coshx.com', 'mailto:info@coshx.com'
