brings back syntax highlighting
 - drops Coderay in favor of existing pygmentize implementation
 - using the "friendly" pygmentize theme: `pygmentize -S friendly -f html`
 - for some reason the first line of code has strange indentation, so hacked around that
 - made sure we show ~66 characters on a line without having to scroll

--- a/app/assets/stylesheets/bootstrap_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.css.scss
@@ -24,7 +24,6 @@
   background-color: $black;
   color: $white;
 }
-
-code {
-  background-color: inherit;
+.highlight {
+  background-color: #fff;
 }
