--- a/app/views/posts/_one_post.html.haml
+++ b/app/views/posts/_one_post.html.haml
@@ -9,7 +9,7 @@
 				on
 				= post.created_at.strftime("%B %d, %Y")
 			.post-content
-				= coderay(post.body_html).html_safe
+				= post.body_html.html_safe
 	.row#more-by-author
 		.column.two
 			%a{:href => about_path, :class => 'about-us-avatar'}(style="background:url(#{Gravatar.new(post.author.email).image_url(:size => 80)});")
