switches to non-indented html output in development
 - the html formatting was causing the code indentitation issue, and had different results on staging and development. This makes the environments more consistent

--- a/app/assets/stylesheets/pygments.css.scss
+++ b/app/assets/stylesheets/pygments.css.scss
@@ -1,6 +1,5 @@
 .highlight {
-  & > pre { margin-left: -9em; padding-top: 0.7em; }
-  & > pre > span:first-of-type { margin-left: 9.9em; }
+  & > pre { padding-left: 1em; padding-top: 0.4em; padding-bottom: 0.5em; }
   font-size: 1.4em;
   overflow-x: auto;
   overflow-y: hidden;
