Fixed the pesky 1px border
Finally!

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -125,7 +125,7 @@ footer {
 }
 
 #footer-bottom {
-  border-top: 1px solid;
+  border-top: 1px solid #242427;
   h4 {
     text-transform: uppercase;
     color: #505050;
