--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -6,14 +6,14 @@
   background: $grey-white;
 
   h3 {
-    font-size: 42px !important;
+    font-size: 42px;
     a {
       color: $dark-grey;
     }
   }
   h2 {
     text-align: left;
-    font-size: 22px !important;
+    font-size: 22px;
     a {
       color: #38A8CC;
     }
@@ -73,12 +73,12 @@
   background-color: $grey-white;
 
   h3 {
-    font-size: 42px !important;
+    font-size: 42px;
     color: $dark-grey;
   }
   h2 {
     text-align: left;
-    font-size: 22px !important;
+    font-size: 22px;
     margin-top: 30px;
     margin-bottom: 30px;
     a {
