--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -65,6 +65,12 @@
       %h3 Meet Your Team
       %h4.main-section-body We're a purposefully small, highly driven team that takes pride in our work - each one of us brings something unique to your project.
   = render_team
+  .row
+    #alumni-header
+      %h3 Coshx Alumni
+      %h4.main-section-body We've had many talented developers work with us over the years.
+  = render_alumni
+
 %div#how-we-work
   .row
     #circle-white
